--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,6 +7,10 @@
     padding: 12px;
     margin-bottom: 20px;
 }
+.lefth1{
+    font-size: 32px;
+    font-family: 'Montserrat', sans-serif;
+}
 .navbar__right{
     display: flex;
     flex: 0.5;
