--- a/src/components/MainDisplay.css
+++ b/src/components/MainDisplay.css
@@ -15,3 +15,24 @@
     text-decoration: underline;
     color:#ff1e56;
 }
+.displayName:hover{
+    text-decoration: none;
+    color: white;
+}
+.displayText:hover{
+    text-decoration: none;
+    color: white;
+}
+@media only screen and (max-width: 800px){
+    .mainDisplay h2{
+        font-size: 52px;
+        margin-left: 20px;
+        padding-left: 10px;
+    }
+    .mainDisplay{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+    }
+}
