--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -124,3 +124,34 @@
         margin-bottom: 20px;
     }
 }
+
+@media only screen and (max-width: 600px){
+    .navbar{
+        display: flex;
+        flex-direction: column;
+    }
+    .navbar__left{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+    .nav{
+        height: 22px;
+        border-radius: 999px;
+    }
+    .menu{
+        height: 20px;
+    }
+    .menu h2{
+        font-size: 16px;
+        margin-left: 4px;
+        padding-left: 4px;
+    }
+    .navbar__right{
+        display: flex;
+        justify-content: center;
+        margin-top: 5px;
+        margin-bottom: 20px;
+    }
+}
