--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,6 +6,7 @@
     margin-right: 10px;
     padding: 12px;
     margin-bottom: 20px;
+    position: sticky;
 }
 .lefth1{
     font-size: 32px;
@@ -46,6 +47,7 @@
     border-radius: 50px;
     overflow: hidden;
     box-shadow: 0 8px 15px rgba(0,0,0,.2);
+    height: 20px;
 }
 
 .menu {
@@ -62,6 +64,7 @@
 }
 .menu h2:hover{
     color: #ff1e56;
+    text-decoration: underline #ff1e56 ;
 }
 
 .nav input:checked ~ .menu {
