Added Me section bottom and GSAP

--- a/src/components/Me.css
+++ b/src/components/Me.css
@@ -1,5 +1,11 @@
 .me{
     display: flex;
+    flex-direction: column;
+}
+.me__top{
+    display: flex;
+    height: 85vh;
+
 }
 .me__left{
     margin-left: 40px;
@@ -9,7 +15,7 @@
     justify-content: center;
 }
 .me__left>img{
-    width: 400px;
+    height: 400px;
 }
 .me__right{
     display: flex;
@@ -32,4 +38,9 @@
     font-size: 28px;
     padding: 8px;
     margin-top: 8px;
+}
+.me__bottom{
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
 }
