--- a/src/components/Me.css
+++ b/src/components/Me.css
@@ -4,8 +4,12 @@
 }
 .me__top{
     display: flex;
-    height: 85vh;
-
+    flex-direction: column;
+}
+.me__bio{
+    display: flex;
+    height: 100%;
+    margin-bottom: 25px;
 }
 .me__left{
     margin-left: 40px;
@@ -39,8 +43,82 @@
     padding: 8px;
     margin-top: 8px;
 }
-.me__bottom{
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
+.me__top--buttons{
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 40px;
+    margin-bottom: 50px;
 }
+.me__top--buttons>button{
+    height: 48px;
+    font-size: 28px;
+    border-radius: 12px;
+    padding-left: 12px;
+}
+.me__bottom{
+    background-color: white;
+    height: 100vh;
+}
+.share-button {
+    width: 280px;
+    height: 80px;
+    background: #dfe6e9;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    transition: .3s linear;
+  }
+  .share-button:hover{
+    transform: scale(1.1);
+  }
+  .share-button span{
+    position: absolute;
+    font-size: 32px;
+    font-weight: 1000;
+    width: 100%;
+    height: 100%;
+    background: white;
+    color: #ff1e56;
+    text-align: center;
+    line-height: 80px;
+    z-index: 999;
+    transition: .6s linear;
+    border-radius: 40px;
+   
+  }
+  .share-button:hover span{
+    transform: translateX(-100%);
+    transition-delay: .3s;
+  }
+  .share-button label {
+    flex: 1;
+    font-size: 26px;
+    margin-right: 20px;
+    color: #2d3436;
+    text-align: center;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: .3s linear;
+  }
+  .share-button:hover label {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  .share-button label:nth-of-type(1){
+    transition-delay: 1s;
+  }
+  .share-button label:nth-of-type(2){
+    transition-delay: .8s;
+  }
+  .share-button label:nth-of-type(3){
+    transition-delay: .6s;
+  }
+  .share-button label:nth-of-type(4){
+    transition-delay: .4s;
+  }
