--- a/src/components/Me.css
+++ b/src/components/Me.css
@@ -61,9 +61,9 @@
     height: 100vh;
 }
 .share-button {
-    width: 280px;
-    height: 80px;
-    background: #dfe6e9;
+    width: 220px;
+    height: 60px;
+    background: #EBECF0;
     border-radius: 40px;
     display: flex;
     align-items: center;
@@ -79,6 +79,7 @@
   }
   .share-button span{
     position: absolute;
+    padding-bottom: 20px;
     font-size: 32px;
     font-weight: 1000;
     width: 100%;
@@ -105,6 +106,7 @@
     transform: translateX(-100%);
     opacity: 0;
     transition: .3s linear;
+    cursor: pointer;
   }
   .share-button:hover label {
     opacity: 1;
